<resources>
    <string name="app_name">Simple Weather</string>
    <string name="open_weather_maps_app_id">a70110de082291c8701e9cac26d34cdc</string>

    <!-- Weather icons -->
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <!-- Main text -->
    <string name="city_text">Displaying weather for</string>
    <string name="current_conditions">Current conditions:</string>
    <string name="forecast">5-day forecast:</string>
    <string name="refresh">Refresh Data</string>

    <!-- Change location dialog -->
    <string name="change_location">Change Location</string>
    <string name="change_location_zip">Search by ZIP</string>
    <string name="change_location_enter_zip">Enter ZIP code</string>
    <string name="change_location_gps">Automatically detect location</string>
    <string name="change_location_cancel">Cancel</string>

    <!-- Change units dialog -->
    <string name="change_units">Change Units</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="change_units_save">Save Changes</string>

    <!-- Weather fields -->
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="wind_speed">Wind Speed:</string>

    <!-- Error messages -->
    <string name="error_location_permission">You must accept the location services permission to automatically find location.</string>
    <string name="error_location_off">Location Settings are off so your location was not automatically detected.</string>
    <string name="error_no_network">Network Unavailable</string>
    <string name="error_no_network_details">Network connection is required to update weather information. Please connect to wifi or data.</string>
    <string name="error_no_network_update">Network connection is required to update weather information.</string>
    <string name="retry">Retry</string>
    <string name="error_row_empty">Error retrieving weather</string>
    <string name="error_location">Error finding location.</string>
    <string name="error_unexpected">Sorry, an expected error occurred! Please contact the developer to report this bug.</string>

</resources>
